jobber-k8s/minikube/0-frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobber-frontend
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobber-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: jobber-frontend
    spec:
      containers:
        - name: jobber-frontend
          image: prabhasranjan0/jobber-frontend:stable
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "0.5"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 150Mi
          ports:
            - name: frontend
              containerPort: 80
