jobber-k8s/minikube/0-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobber-frontend
  namespace: bb-prod
spec:
  type: ClusterIP
  selector:
    app: jobber-frontend
  ports:
    - name: frontend
      port: 80
      targetPort: frontend
      protocol: TCP
